--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           </div>
         </div>
         <div class="youb_arrow_wrap bounce anchor">
-  				<a href="#container"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
+  				<a href="#about"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
   			</div>
       </header>
     <!-- END Header -->
